--- a/index.html
+++ b/index.html
@@ -95,98 +95,104 @@
                     <img src="/images/dark85.jpg" title="Dark Chocolate" alt="Dark Chocolate"
                         class="mr-3 img-thumbnail">
                     <div class="media-body">
-                        <h2>85% DARK CHOCOLATE<span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-success">$0,99</span></h2>
-                        <p class="d-none d-md-block">Dark chocolate with no added sugar. Here you can taste the flavor of cocoa beans.</p>
+                        <h2>85% DARK CHOCOLATE<span class="badge badge-danger">HOT</span><span
+                                class="badge badge-pill badge-success">$0,99</span></h2>
+                        <p class="d-none d-md-block">Dark chocolate with no added sugar. Here you can taste the flavor
+                            of cocoa beans.</p>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="row row-content align-items-center">
-        <div class="col-sm-4 col-md-3">
-            <h3>WEEK’S OFFER</h3>
-        </div>
-        <div class="col-sm-2 col-md-3">
-            <h2>Our basket</h2>
-            <p class="d-none d-md-block">This week we offer a basket with 10 delicious chocolates! </p>
-        </div>
-        <div class="col-sm-6 col-md-6">
-            <p class="d-none d-md-block">
-            </p>
         </div>
     </div>
 
     <div class="row flex-row-reverse row-content align-items-center">
         <div class="col-sm-4 col-md-3">
-            <h3>Meet our Specialists</h3>
+            <h3>WEEK’S OFFER </h3>
         </div>
         <div class="col-sm col-md">
             <div class="media">
-                <img src="/images/cartoonVasilis.png" title="Vasilis" alt="Dark Chocolate" class="mr-3 img-thumbnail">
+                <img src="/images/promotion.jpg" title="Basket" alt="Basket" class="mr-3 img-thumbnail">
                 <div class="media-body">
-                    <h2>Vasilis Wilson </h2>
-                    <h4>Sous-chef</h4>
-                    <p class="d-none d-md-block">Vasilis is well informed of all the current trends in pastry and contributes his innovative ideas in our products.</p>
+                    <h2>Our basket <span class="badge badge-danger">NEW</span><span
+                            class="badge badge-pill badge-success">$4,99</span></h2>
+                    <p class="d-none d-md-block">This week we offer a basket with 10 delicious chocolates! </p>
                 </div>
             </div>
         </div>
-    </div>
+        
 
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-5 offset-sm-1 col-sm-2">
-                    <h5>Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-sm-5">
-                    <h5>Our Address</h5>
-                    <address>
-                        121, Clear Wave Road<br>
-                        Clear Wave Road, Aloha<br>
-                        HAWAII<br>
-                        <i class="fa fa-phone fa-lg"></i> +987 6543 2100 <br>
-                        <i class="fa fa-fax fa-lg"></i> +987 6543 2101 <br>
-                        <i class="fa fa-envelope fa-lg"></i> <a href="mailto: chocolat@nomail.net">
-                            chocolat@nomail.net
-                        </a>
-                    </address>
-                </div>
-                <div class="col col-sm-4 align-self-center">
-                    <div style="text-align: center;">
-                        <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+">
-                            <i class="fa fa-google-plus"></i></a>
-                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id=">
-                            <i class="fa fa-facebook"></i></a>
-                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/">
-                            <i class="fa fa-linkedin"></i></a>
-                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/">
-                            <i class="fa fa-twitter"></i></a>
-                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/">
-                            <i class="fa fa-youtube"></i></a>
-                        <a class="btn btn-social-icon" href="mailto:">
-                            <i class="fa fa-envelope-o"></i></a>
+        <div class="row flex-row-reverse row-content align-items-center">
+            <div class="col-sm-4 col-md-3">
+                <h3>Meet our Specialists</h3>
+            </div>
+            <div class="col-sm col-md">
+                <div class="media">
+                    <img src="/images/cartoonVasilis.png" title="Vasilis" alt="Dark Chocolate"
+                        class="mr-3 img-thumbnail">
+                    <div class="media-body">
+                        <h2>Vasilis Wilson </h2>
+                        <h4>Sous-chef</h4>
+                        <p class="d-none d-md-block">Vasilis is well informed of all the current trends in pastry and
+                            contributes his innovative ideas in our products.</p>
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-auto">
-                    <p> &copy; <small>2020 Le Chocolat</small></p>
+        </div>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-5 offset-sm-1 col-sm-2">
+                        <h5>Links</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Menu</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-sm-5">
+                        <h5>Our Address</h5>
+                        <address>
+                            121, Clear Wave Road<br>
+                            Clear Wave Road, Aloha<br>
+                            HAWAII<br>
+                            <i class="fa fa-phone fa-lg"></i> +987 6543 2100 <br>
+                            <i class="fa fa-fax fa-lg"></i> +987 6543 2101 <br>
+                            <i class="fa fa-envelope fa-lg"></i> <a href="mailto: chocolat@nomail.net">
+                                chocolat@nomail.net
+                            </a>
+                        </address>
+                    </div>
+                    <div class="col col-sm-4 align-self-center">
+                        <div style="text-align: center;">
+                            <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+">
+                                <i class="fa fa-google-plus"></i></a>
+                            <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id=">
+                                <i class="fa fa-facebook"></i></a>
+                            <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/">
+                                <i class="fa fa-linkedin"></i></a>
+                            <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/">
+                                <i class="fa fa-twitter"></i></a>
+                            <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/">
+                                <i class="fa fa-youtube"></i></a>
+                            <a class="btn btn-social-icon" href="mailto:">
+                                <i class="fa fa-envelope-o"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto">
+                        <p> &copy; <small>2020 Le Chocolat</small></p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
-    <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/tether/dist/js/tether.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        </footer>
+        <!-- jQuery first, then Tether, then Bootstrap JS. -->
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="node_modules/tether/dist/js/tether.min.js"></script>
+        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
